<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/yellow_background"
        tools:context=".fragments.ContactFragment">

    <TextView
            android:layout_marginTop="@dimen/margin_16dp"
            android:textSize="@dimen/text_32sp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tusj"
            android:text="@string/contact_details"
    />

    <LinearLayout
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contact_details_fragment_fname_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contact_details_fragment_fname_tie"
                    android:layout_width="match_parent"
                    android:tag="@string/full_name"
                    android:hint="@string/full_name"
                    android:fontFamily="@font/tusj"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.hbb20.CountryCodePicker
                    android:id="@+id/contact_details_fragment_country_code_picker"
                    android:gravity="center"
                    app:ccp_defaultNameCode="IL"
                    app:ccp_customMasterCountries="US,IL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

            </com.hbb20.CountryCodePicker>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contact_details_fragment_phone_til"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/contact_details_fragment_phone_tie"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:fontFamily="@font/tusj"
                        android:tag="@string/phone_number"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <View
                android:id="@+id/contact_details_fragment_phone_underline_view"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/phone_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
        />

    </LinearLayout>

    <Button
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_alignParentBottom="true"
            android:text="@string/submit"
            android:id="@+id/contact_details_fragment_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ProgressBar
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/contact_details_fragment_progress_bar"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp"/>
</RelativeLayout>